fixed mail icon and spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -141,6 +141,13 @@ FRONT PAGE
 }
 
 /**********
+POST
+**********/
+.bookLinks {
+  text-align: center;
+}
+
+/**********
 ARCHIVE
 **********/
 
@@ -173,6 +180,6 @@ footer {
   display: inline-block;
   width: 100%;
   height: auto;
-  max-width: 50px;
+  max-width: 45px;
   margin: 10px;
 }
